objects/nMAPPER__Map_Action__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Actions available on the Map component.</description>
    <fields>
        <fullName>nMAPPER__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Object_Name__c</fullName>
        <label>sObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMAPPER__Url__c</fullName>
        <description>The URL to be redirected to when interacting with the action.</description>
        <inlineHelpText>You may use {0} as a placeholder for the sObject&apos;s Id.</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Map Action</label>
</CustomObject>